Сделал красивой план здания
